# cosmic-sim

./: INSTALL.md  LICENSE  MANIFEST.in  README.md  README_FULL_SCALE.md  examples.py  full_scale_simulation.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  codeql.yml  docs.yml  publish.yml
cosmic-sim/: main.py
cosmic_sim/: __init__.py  body.py  core.py  nbody.py  orbital.py  presets.py  save_load.py  visualization.py  visualization_advanced.py
tests/: __init__.py  test_body.py  test_core.py  test_nbody.py  test_presets.py
