[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-sim"
version = "0.1.0"
description = "Библиотека для симуляции космических явлений и орбитальной механики"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["astronomy", "physics", "simulation", "orbital-mechanics", "parallax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/cosmic-sim"
Documentation = "https://github.com/yourusername/cosmic-sim#readme"
Repository = "https://github.com/yourusername/cosmic-sim"
Issues = "https://github.com/yourusername/cosmic-sim/issues"

[tool.setuptools]
packages = ["cosmic_sim"]

[tool.setuptools.package-data]
cosmic_sim = ["py.typed"]

